--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1>Hello, <span></span></h1>
+        <h1>Hi, <span></span></h1>
         <h1>I am <span></span></h1>
         <h1>Taufiq <span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
