--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           </div>
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
+            <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#services" data-after="Service">Experiences</a></li>
             <li><a href="#projects" data-after="Projects">Research</a></li>
-            <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
           </ul>
         </div>
@@ -40,14 +40,39 @@
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1>Hi, <span></span></h1>
+        <h1>Hello, <span></span></h1>
         <h1>I am <span></span></h1>
         <h1>Taufiq <span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        <a href="#about" type="button" class="cta">Welcome to my website </a>
       </div>
     </div>
   </section>
   <!-- End Hero Section  -->
+
+
+  <!-- About Section -->
+  <section id="about">
+    <div class="about container">
+      <div class="col-left">
+        <div class="about-img">
+          <img src="./img/potrait.jpg" alt="img">
+        </div>
+      </div>
+      <div class="col-right">
+        <h1 class="section-title">About <span>me</span></h1>
+        <h2>Lecturer</h2>
+        <p>Currently, I hold the position of a lecturer at BRAC University, where I contribute to the academic landscape by sharing my expertise in Computer Science and Engineering. I completed my Bachelor's degree in the same field at BRAC University, and subsequent to my undergraduate studies, I garnered over two years of valuable industry experience as a software engineer in renowned software companies. In my capacity as a lecturer, I am committed to imparting knowledge and instilling a passion for computer science among my students.</p>
+          <p>An innovative and knowledgeable professional who is involved with high-quality research and teaching for the
+            last 3 years. Looking forward working as a Researcher where I can grow & contribute ideas for a
+            sustainable future.</p>
+            <p>An innovative and knowledgeable professional who is involved with high-quality research and teaching for the
+              last 3 years. Looking forward working as a Researcher where I can grow & contribute ideas for a
+              sustainable future.</p>
+        <a href="./img/Taufiq_s_CV_for_Academic-1.pdf" class="cta">Download Resume</a>
+      </div>
+    </div>
+  </section>
+  <!-- End About Section -->
 
   <!-- Service Section -->
   <section id="services">
@@ -179,25 +204,7 @@
   </section>
   <!-- End Projects Section -->
 
-  <!-- About Section -->
-  <section id="about">
-    <div class="about container">
-      <div class="col-left">
-        <div class="about-img">
-          <img src="./img/img-2.png" alt="img">
-        </div>
-      </div>
-      <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
-        <h2>Lecturer</h2>
-        <p>An innovative and knowledgeable professional who is involved with high-quality research and teaching for the
-          last 3 years. Looking forward working as a Researcher where I can grow & contribute ideas for a
-          sustainable future.</p>
-        <a href="https://drive.google.com/file/d/1cQzo0acr15lKnN_CSu2ALYWjlvMe_Z4x/view?usp=sharing" class="cta">Download Resume</a>
-      </div>
-    </div>
-  </section>
-  <!-- End About Section -->
+  
 
   <!-- Contact Section -->
   <section id="contact">
