--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <!-- <li><a href="#hero" data-after="Home">Home</a></li> -->
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#services" data-after="Service">Experiences</a></li>
+            <li><a href="#educations" data-after="Education">Education</a></li>
             <li><a href="#contact" data-after="Contact">Awards</a></li>
             <li><a href="#projects" data-after="Projects">Research</a></li>
-            <li><a href="#contact" data-after="Contact">Education</a></li>
+            
             <li><a href="#contact" data-after="Contact">Project</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
             <li><a href="./img/Taufiq_s_CV_for_Academic-1.pdf" data-after="Contact">CV</a></li>
@@ -160,6 +161,59 @@
   </section>
   <!-- End Service Section -->
 
+
+
+   <!-- Education Section -->
+   <section id="educations">
+    <div class="educations container">
+      <div class="education-top">
+        <h1 class="section-title"><span>E</span>ducation</h1>
+        <p></p>
+          </div>
+      <div class="education-bottom">      
+        <div class="education-item">
+          <h2>B.S.C in CSE, <span>B</span>RAC <span>U</span>niversity</h2>
+            <p>  
+            • CGPA: 3.9 / 4.00
+            <br>
+            • Year: 2020
+            </p>
+        </div>
+
+        <div class="education-item">
+          <h2>H.S.C in Science, Dhaka College</h2>
+            <p>  
+            • CGPA: 5.00 / 5.00
+            <br>
+            • Year: 2015
+            </p>
+        </div>
+
+        <div class="education-item">
+          <h2>S.S.C in Science, Shere Bangla Nagar Govt Boys’ High School</h2>
+            <p>  
+            • CGPA: 5.00 / 5.00
+            <br>
+            • Year: 2013
+            </p>
+        </div>
+
+   <div class="education-item">
+          <h2>J.S.C, Shere Bangla Nagar Govt Boys’ High School</h2>
+            <p>  
+            • CGPA: 5.00 / 5.00
+            <br>
+            • Year: 2010
+            </p>
+        </div>
+
+
+        
+      </div>
+    </div>
+  </section>
+  <!-- End Education Section -->
+
   
   <!-- Projects Section -->
   <section id="projects">
@@ -195,7 +249,6 @@
   <!-- End Projects Section -->
 
   
-
   <!-- Contact Section -->
   <section id="contact">
     <div class="contact container">
