--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
     </div>
   </section>
-  <!-- End Service Section -->
+  <!-- End Service Section --->
 
   <!-- Projects Section -->
   <section id="projects">
